# slskd-mcp

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
docker/: docker-compose.yml  wait-for-ready.sh
generator/: __main__.py  codegen.py  context_builder.py  loader.py  naming.py  schema_parser.py
research/: integration-testing-findings.md  mcp-server-best-practices.md
spec/: openapi.json
templates/: server.py.j2
tests/: conftest.py  test_codegen.py  test_context_builder.py  test_integration.py  test_modules.py  test_naming.py  test_schema_parser.py
