[project]
name = "slskd-mcp"
version = "0.1.0"
description = "AI-generated MCP server for the slskd API v0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: requires live slskd instance",
]
timeout = 60

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
